Fix overlapping messages

--- a/client/src/components/chatbox.css
+++ b/client/src/components/chatbox.css
@@ -47,7 +47,7 @@
 }
 
 .own-message {
-    float: right;
+    margin-left: 5vw;
     background-color: #2196F3;
     border-color: #2196F3;
 }
